minor correction to Toolbar CSS overflow

--- a/src/components/ids-toolbar/ids-toolbar.scss
+++ b/src/components/ids-toolbar/ids-toolbar.scss
@@ -18,6 +18,7 @@
   flex-flow: row nowrap;
   height: 100%;
   justify-content: space-between;
+  overflow: hidden;
   width: 100%;
 
   &.disabled {
